# xhs-likes-manager

./: .gitignore  LICENSE  README.md  README_CN.md  config.example.yaml  pyproject.toml
xhs_likes_manager/: __init__.py  __main__.py  auth.py  browser.py  cli.py  config.py  fetcher.py  paper_extractor.py  reviewer.py  tagger.py  unlike.py  utils.py
